--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header>
+        <div id="logo">
+            <img src="./img/Logo.png" alt="Logo Boolean">
+            <span id="title">Toboolist</span>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="inside-container" id="add-buttons">
+                <button id="add-task">Add Task</button>
+                <button id="add-section">Add Section</button>
+            </div>
+            <section class="inside-container section-distance">
+                <h3 class="section-title">&#9660 New Task</h3>
+                <p><span class="check">&#10003</span> Quaterly Newsletter <span class="editorial">Editorial</span></p>
+            </section>
+            <section class="inside-container section-distance">
+                <h3 class="section-title">&#9660 Today</h3>
+                <p><span class="check">&#10003</span> Recruiting blog post <span class="editorial"> Editorial </span></p>
+                <p><span class="check">&#10003</span> Mobile app launch <span class="q1-goals"> Q1 Goals </span></p>
+                <p><span class="uncheck">&#10007</span> Interview John H. <span class="recruiting"> Recuiting </span></p>
+                <p><span class="check">&#10003</span> Summit update to mobile storefronts <span class="mobile"> Mobile </span></p>
+            </section>
+            <section class="inside-container section-distance">
+                <h3 class="section-title">&#9660 Upcoming</h3>
+                <p><span class="uncheck">&#10007</span> Schedule meeting with Alex </p>
+                <p><span class="check">&#10003</span> Homepage refresh <span class="website"> Website </span></p>
+                <p><span class="check">&#10003</span> Onboard new Sales team members <span class="sales"> Sales </span></p>
+                <p><span class="check">&#10003</span> Review editorial calendar <span class="editorial"> Editorial </span></p>
+            </section>
+        </div>
+        
+    </main>
 </body>
 </html>
