--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
 </head>
 <body>
     <header>
-        <div id="logo">
-            <img src="./img/Logo.png" alt="Logo Boolean">
-            <span id="title">Toboolist</span>
+        <div id="header-logo">
+            <img id="logo" src="./img/Logo.png" alt="Logo Boolean">
+            <span id="logo-title"> Toboolist </span>
         </div>
     </header>
     <main>
-        <div class="container">
+        <!-- Parte superiore del Main -->
+        <div class="container" id="top-container">
             <div class="inside-container" id="add-buttons">
                 <button id="add-task">Add Task</button>
                 <button id="add-section">Add Section</button>
             </div>
+        </div>
+        <!-- Parte centrale del Main -->
+        <div class="container" id="main-container">
+            <!-- Prima Section -->
             <section class="inside-container section-distance">
                 <h3 class="section-title">&#9660 New Task</h3>
                 <p><span class="check">&#10003</span> Quaterly Newsletter <span class="editorial">Editorial</span></p>
             </section>
+            <!-- Seconda Section -->
             <section class="inside-container section-distance">
                 <h3 class="section-title">&#9660 Today</h3>
                 <p><span class="check">&#10003</span> Recruiting blog post <span class="editorial"> Editorial </span></p>
@@ -31,6 +37,7 @@
                 <p><span class="uncheck">&#10007</span> Interview John H. <span class="recruiting"> Recuiting </span></p>
                 <p><span class="check">&#10003</span> Summit update to mobile storefronts <span class="mobile"> Mobile </span></p>
             </section>
+            <!-- Terza Section -->
             <section class="inside-container section-distance">
                 <h3 class="section-title">&#9660 Upcoming</h3>
                 <p><span class="uncheck">&#10007</span> Schedule meeting with Alex </p>
