--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <!-- Parte superiore del Main -->
         <div class="container" id="top-container">
             <div class="inside-container" id="add-buttons">
-                <button id="add-task">Add Task</button>
-                <button id="add-section">Add Section</button>
+                <button type="button" id="add-task">Add Task</button>
+                <button type="button" id="add-section">Add Section</button>
             </div>
         </div>
         <!-- Parte centrale del Main -->
@@ -27,23 +27,23 @@
             <!-- Prima Section -->
             <section class="inside-container section-distance">
                 <h3 class="section-title">&#9660 New Task</h3>
-                <p class="check"> Quaterly Newsletter <span class="editorial">Editorial</span></p>
+                <p class="check"> Quaterly Newsletter <span class="tag editorial">Editorial</span></p>
             </section>
             <!-- Seconda Section -->
             <section class="inside-container section-distance">
                 <h3 class="section-title">&#9660 Today</h3>
-                <p class="check"> Recruiting blog post <span class="editorial"> Editorial </span></p>
-                <p class="check"> Mobile app launch <span class="q1-goals"> Q1 Goals </span></p>
-                <p class="uncheck"> Interview John H. <span class="recruiting"> Recuiting </span></p>
-                <p class="check"> Summit update to mobile storefronts <span class="mobile"> Mobile </span></p>
+                <p class="check"> Recruiting blog post <span class="tag editorial"> Editorial </span></p>
+                <p class="check"> Mobile app launch <span class="tag q1-goals"> Q1 Goals </span></p>
+                <p class="uncheck"> Interview John H. <span class="tag recruiting"> Recuiting </span></p>
+                <p class="check"> Summit update to mobile storefronts <span class="tag mobile"> Mobile </span></p>
             </section>
             <!-- Terza Section -->
             <section class="inside-container section-distance">
                 <h3 class="section-title">&#9660 Upcoming</h3>
                 <p class="uncheck"> Schedule meeting with Alex </p>
-                <p class="check"> Homepage refresh <span class="website"> Website </span></p>
-                <p class="check"> Onboard new Sales team members <span class="sales"> Sales </span></p>
-                <p class="check"> Review editorial calendar <span class="editorial"> Editorial </span></p>
+                <p class="check"> Homepage refresh <span class="tag website"> Website </span></p>
+                <p class="check"> Onboard new Sales team members <span class="tag sales"> Sales </span></p>
+                <p class="check"> Review editorial calendar <span class="tag editorial"> Editorial </span></p>
             </section>
         </div>
         
